content/docs/0.8.x/reference/cli/commands/keptn_configure_bridge.md
---
date: "2020-11-19T19:04:54+05:30"
title: "keptn configure bridge"
slug: keptn_configure_bridge
---
## keptn configure bridge

Configures the credentials for the Keptn Bridge

### Synopsis

Configures the credentials for the Keptn Bridge.

```
keptn configure bridge --user=<user> --password=<password> [flags]
```

### Examples

```
keptn configure bridge --user=<user> --password=<password>
```

### Options

```
  -h, --help              help for bridge
  -o, --output            Print the current credentials
  -p, --password string   The password to login to the bridge
  -u, --user string       The user name to login to the bridge
```

### Options inherited from parent commands

```
      --mock                 Disables communication to a Keptn endpoint
  -n, --namespace string     Specify the namespace where Keptn should be installed, used and uninstalled in (default keptn). (default "keptn")
  -q, --quiet                Suppresses debug and info messages
      --suppress-websocket   Disables WebSocket communication to suppress info messages from services running inside Keptn
  -v, --verbose              Enables verbose logging to print debug messages
```

### SEE ALSO

* [keptn configure](../keptn_configure/)	 - Configures one of the specified parts of Keptn

###### Auto generated by spf13/cobra on 19-Nov-2020
