content/docs/0.11.x/reference/cli/commands/keptn_configure_bridge.md
---
date: "2021-11-25T14:20:40Z"
title: "keptn configure bridge"
slug: keptn_configure_bridge
---
## keptn configure bridge

Configures the credentials for the Keptn Bridge

### Synopsis

Configures the credentials for the Keptn Bridge.

```
keptn configure bridge --user=<user> --password=<password> [flags]
```

### Examples

```
keptn configure bridge --user=<user> --password=<password>
```

### Options

```
  -o, --output            Print the current credentials
  -p, --password string   The password to login to the bridge
  -u, --user string       The user name to login to the bridge
```

### Options inherited from parent commands

```
      --config-file string   Specify custom Keptn Config file path (default: ~/.keptn/config)
  -h, --help                 help
      --mock                 Disables communication to a Keptn endpoint
  -n, --namespace string     Specify the namespace where Keptn should be installed, used and uninstalled in (default "keptn")
  -q, --quiet                Suppresses debug and info messages
  -v, --verbose              Enables verbose logging to print debug messages
  -y, --yes                  Assume yes for all user prompts
```

### SEE ALSO

* [keptn configure](../keptn_configure/)	 - Configures one of the specified parts of Keptn

###### Auto generated by spf13/cobra on 25-Nov-2021
